# voice_agent

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_test.py  voice_agent.db
.github/workflows/: ci-cd.yml
app/: config.py  main.py
app/api/: health.py  router.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: appointments.py  callbacks.py  calls.py
app/core/: crm.py  knowledge_base.py  llm.py  prompt_manager.py  vapi.py
app/db/: models.py  session.py
app/models/: appointments.py  callbacks.py  calls.py
app/services/: appointment_service.py  call_service.py  callback_service.py
app/utils/: helpers.py
deploy/kubernetes/: app-config.yaml  app-deployment.yaml  app-ingress.yaml  app-service.yaml
deploy/nginx/: nginx.conf
deploy/scripts/: deploy.sh  import_n8n_workflows.sh  setup_env.sh
deploy/terraform/: main.tf  outputs.tf  variables.tf
n8n/: setup.md
n8n/workflows/: inbound_call.json  outbound_call.json
prompts/: answer_general_question.txt  extract_appointment_details.txt  extract_cancellation_details.txt  extract_reschedule_details.txt  generate_callback_script.txt  intent_classification.txt
scripts/: init_db.py
