[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "voice-agent"
version = "1.0.0"
description = "A voice agent system that handles inbound and outbound calls using VAPI, N8N, and Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
repository = "https://github.com/yourusername/voice-agent"
documentation = "https://github.com/yourusername/voice-agent/blob/main/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
httpx = "^0.27.0"
anthropic = "^0.16.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"
loguru = "^0.7.2"
jinja2 = "^3.1.3"
orjson = "^3.9.12"
asyncpg = "^0.28.0"
redis = "^5.0.1"
aiofiles = "^23.2.1"
python-multipart = "^0.0.7"
email-validator = "^2.1.0"
phonenumbers = "^8.13.16"
celery = "^5.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
faker = "^22.2.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
prometheus-client = "^0.17.1"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "jose.*",
    "passlib.*",
    "dotenv.*",
    "tenacity.*",
    "loguru.*",
    "jinja2.*",
    "orjson.*",
    "redis.*",
    "aiofiles.*",
    "anthropic.*",
    "phonenumbers.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"